# product-catalog-and-inventory-management-system

./: .dockerignore  .trivyignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test.db
.github/workflows/: pcaims-app.yml
pcaims-deployment/: Chart.yaml  README.md  deploy.sh  generated-deployment.yaml  values.yaml
pcaims-deployment/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
pcaims-deployment/templates/tests/: test-connection.yaml
src/backend/: README.md  auth.py  data_access.py  database_connection.py  dockerfile  env_example.txt  generate_hashes.py  init_db.py  main.py  models.py  requirements.txt  schemas.py  test_auth.py
src/database/: init.sql
src/frontend/: app.py  dockerfile
src/frontend/templates/: base.html  index.html  inventory.html  login.html  products.html  users.html
src/test/: conftest.py  requirements.txt  test.db  test_auth.py  test_categories.py  test_customers.py  test_data_access.py  test_inventory.py  test_inventory_transactions.py  test_models.py  test_orders.py  test_products.py  test_purchase_orders.py  test_suppliers.py  test_users.py
