[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcaims"
version = "0.1.0"
description = "Product catalog and inventory management system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pymysql==1.1.0",
    "cryptography==41.0.7",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "email-validator==2.1.1",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.0.1",
    "python-dotenv==1.0.0",
    "alembic==1.12.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*", "frontend*"]
